@@ -53,8 +53,8 @@
         </tal:mail>
 
         <tal:comment replace="nothing">XXX Added by PloneMeting : store generated document as annex.</tal:comment>
-        <tal:store_as_annex condition="python: view.displayStoreAsAnnexSection()">
-            <tal:defines define="store_as_annex_uid python: infos['store_as_annex_uid']"
+        <tal:store_as_annex condition="view/displayStoreAsAnnexSection">
+            <tal:defines define="store_as_annex_uid infos/store_as_annex_uid"
                          condition="python: store_as_annex_uid and view.may_store_as_annex(infos['template_uid'], store_as_annex_uid)">
                 <a style="cursor: pointer"
                    tal:attributes="onclick string:event.preventDefault();;javascript:$(this).parents('form')[0].store_as_annex_uid.value='${store_as_annex_uid}';;javascript:$(this).parents('form')[0].target='_self';;generatePodDocument('${infos/template_uid}','${infos/output_format}', this);;">
